k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: gateway
      port:
        number: 8080
  rules:
    - host: microservices-cluster.info
      http:
        paths:
          - path: /
            backend:
              service:
                name: employee
                port:
                  number: 8080
            pathType: Prefix
